--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h3{
 p{
     font-size: 30px;
 }
-section{
+.contener{
     display: flex;
     margin-bottom: 100px;
 }
@@ -44,4 +44,27 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.item{
+    border-left: 5px solid tomato;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px gray;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#web{
+    border-left: 7px solid; 
+    border-image: linear-gradient (blue, cyan,);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
